<resources>
    <string name="active_orders">Active Orders will appear below</string>
    <string name="active_orders_drawer">Active Orders</string>
    <string name="app_name">FSC Dine</string>
    <string name="about_us_version">Version: 1.0.1</string>
    <string name="account_delete_success">Your account has been successfully deleted</string>
    <string name="account_delete_unsuccessful">Your account has not been deleted</string>
    <string name="account_info">Account Information</string>
    <string name="account_first_name">First name:</string>
    <string name="account_member_since">Join date:</string>
    <string name="account_last_name">Last name:</string>
    <string name="account_user_type">User type:</string>
    <string name="action_settings">Settings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="added_to_cart">Your item has been added to your cart!</string>
    <string name="cart_cleared">Your cart has been cleared</string>
    <string name="change_password">Change Password</string>
    <string name="cart_header">Items added to your cart will appear below</string>
    <string name="closed_orders_drawer">Closed Orders</string>
    <string name="closed_orders_header">Closed Orders will appear below</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_fragment">Are you sure you want to delete your account?</string>
    <string name="delete_account_confirm">Yes, Delete Account</string>
    <string name="delete_menu_item_textview">Are you sure you want to delete this menu item?</string>
    <string name="delete_restaurant_label">Delete Restaurant</string>
    <string name="delete_restaurant_textview">Are you sure you want to delete this restaurant? If so, enter the restaurant name to confirm deletion</string>
    <string name="delete_restaurant_yes">Yes, Delete Restaurant</string>
    <string name="email_address">Email:</string>
    <string name="email_address_confirm">Enter email to confirm deletion</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full name:</string>

    <string name="go_back">Go back</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_employee_code">Employee Registration Code</string>
    <string name="history_header">Your previously purchased items will appear below</string>

    <string name="last_name">Last Name</string>
    <string name="login">Log in to FSC Dine</string>
    <string name="logout1">Log out from FSC Dine?</string>
    <string name="logout2">Yes, log out</string>
    <string name="logout3">No, stay signed in</string>
    <string name="logout4">You have successfully logged out!</string>

    <string name="no_items">You have no items in your cart</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover Drinks</string>
    <string name="menu_create">Create Your Own Drink</string>
    <string name="menu_history">History</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_log_out">Log Out of FSC Dine</string>
    <string name="menu_settings">Account Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="no_account2">Need to register as an Employee?</string>
    <string name="profile_picture">Tap to edit</string>

    <string name="recommend">Check out the featured drink of the day</string>
    <string name="registration">Create Account</string>
    <string name="registration2">User Registration</string>
    <string name="registration3">Employee Registration</string>
    <string name="return_to_login">Return to Login Page</string>


    <string name="order_history_header">Previous orders will appear below</string>
    <string name="order_placed">Your order has been placed!</string>
    <string name="orders_placed">Orders placed will appear below</string>
    <string name="sign_in_unsuccessful">Sign-In Unsuccessful, Please Try Again</string>
    <string name="sign_in_successful">You are now logged in!</string>
    <string name="success_password_change">Your password has been successfully updated</string>

    <string name="update_password"> Update Password</string>

    <string name="calories">Calories:</string>
    <string name="taste">Taste:</string>
    <string name="price">Price:</string>

    <string name="pay_now">Pay Now</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_all_items">Clear all items from cart?</string>

    <string name="cart">Cart</string>
    <string name="yescc">Yes, clear cart</string>
    <string name="nocc">No, return to cart</string>
    <string name="title_menu">Menu</string>
    <string name="title_current_order">Your Order</string>
    <string name="title_previous_order">History</string>
    <string name="title_profile">Account</string>
    <string name="checkout_bag">Checkout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="restaurant_1_name">Burger Studio</string>
    <string name="restaurant_drawer">Edit Restaurants</string>

    <string name="radioBtn_multiple_select">Multiple Select</string>
    <string name="radioBtn_single_select">Single Select</string>
    <string name="radioBtn_no_select">No Select</string>
    <string name="unsuccessful_password_change">Password could not be changed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
