<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.fsc_diner.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.fsc_diner.ui.account.AccountFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_CheckOutBag"
        android:name="com.example.fsc_diner.ui.checkout.CheckOutFragment"
        android:label="@string/checkout_bag"
        tools:layout="@layout/fragment_check_out" />

    <fragment
        android:id="@+id/navigation_CurrentOrders"
        android:name="com.example.fsc_diner.ui.currentOrders.CurrentOrdersFragment"
        android:label="@string/title_current_order"
        tools:layout="@layout/fragment_current_orders" />

    <fragment
        android:id="@+id/navigation_OrderHistory"
        android:name="com.example.fsc_diner.ui.ordersHistory.ordersHistory"
        android:label="@string/title_previous_order"
        tools:layout="@layout/fragment_orders_history" />


</navigation>