<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_employee"
    app:startDestination="@+id/navigation_active_orders">

    <fragment
        android:id="@+id/navigation_active_orders"
        android:name="com.example.fsc_diner.ui.ActiveOrders.ActiveOrders"
        android:label="@string/active_orders_drawer"
        tools:layout="@layout/fragment_active_orders" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.fsc_diner.ui.account.AccountFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_closed_orders"
        android:name="com.example.fsc_diner.ui.ClosedOrders.ClosedOrders"
        android:label="@string/closed_orders_drawer"
        tools:layout="@layout/fragment_closed_orders" />

</navigation>