<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E04462"
    tools:context=".controller.UserRegistration">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/registration2"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/firstNameRegistration"
        style="@style/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_person_outline"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/lastNameRegistration"
        style="@style/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_person_outline"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/emailRegistration"
        style="@style/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_mail_outline_black"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/passwordRegistration"
        style="@style/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_lock_outline"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/confirmPasswordRegistration"
        style="@style/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_lock_outline"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/clear_cart_button"
        android:drawableEnd="@drawable/ic_check"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="completeRegistration"
        android:paddingStart="50dp"
        android:paddingEnd="25dp"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="employeeRegistration"
        android:text="@string/no_account2"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>