<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient_background"
    tools:context=".controller.EmployeeRegistration">

    <TextView
        android:id="@+id/textView9"
        style="@style/TextHighlight"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/registration3"
        android:textColor="@android:color/black"
        android:textSize="30sp" />


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/constraintLayout2"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_gradient_color"
        android:fontFamily="sans-serif-condensed">

        <EditText
            android:id="@+id/employeeRegFirstName"
            style="@style/credentials"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_person_outline"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/employeeRegLastName"
            style="@style/credentials"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_person_outline"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/employeeRegEmail"
            style="@style/credentials"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_mail_outline_black"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/employeeRegPassword"
            style="@style/credentials"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_lock_outline"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/employeeRegConfirmPassword"
            style="@style/credentials"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_lock_outline"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/employeeRegCode"
            style="@style/credentials"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_key_outline"
            android:ems="10"
            android:hint="@string/hint_employee_code"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/employeeRestaurant"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableStart="@drawable/ic_key_outline" />

    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/red_round_border"
        android:drawableEnd="@drawable/ic_check"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="completeRegistration"
        android:paddingStart="50dp"
        android:paddingEnd="25dp"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/returnToLoginPageTV"
        style="@style/TextHighlight"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="returnToLogin"
        android:text="@string/return_to_login"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</LinearLayout>