<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logoutDialogHeader"
        style="@style/TextHighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/change_password"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/enterPasswordChangeTV"
        android:inputType="textPassword"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_lock_outline"
        android:drawablePadding="5dp"
        android:padding="6dp"
        android:hint="@string/enter_new_password"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/confirmPasswordChangeTV"
        android:inputType="textPassword"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_lock_outline"
        android:drawablePadding="4dp"
        android:padding="6dp"
        android:hint="@string/confirm_new_password"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/clear_cart_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="10dp"
        android:text="@string/update_password"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/closePWFragmentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/go_back"
        android:textColor="@android:color/black" />

</LinearLayout>