<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        style="@style/TextHighlight"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/delete_account_fragment"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/enterEmailDeleteAccountTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/white_square_text_border"
        android:drawableStart="@drawable/ic_mail_outline_black"
        android:drawablePadding="5dp"
        android:hint="@string/email_address_confirm"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/confirmDeleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/clear_cart_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="10dp"
        android:text="@string/delete_account_confirm"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/closeDAFragmentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/go_back"
        android:textColor="@android:color/black" />

</LinearLayout>