<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient_background"
    tools:context=".RegistrationActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_button_border"
        android:drawableRight="@drawable/ic_check"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="completeRegistration"
        android:paddingLeft="50dp"
        android:paddingRight="25dp"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextHighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/registration2"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="340dp"
        android:layout_height="315dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/white_gradient_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <EditText
            android:id="@+id/firstNameRegistration"
            style="@style/credentials"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_text_border"
            android:drawableLeft="@drawable/ic_person_outline"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lastNameRegistration"
            style="@style/credentials"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableLeft="@drawable/ic_person_outline"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameRegistration" />

        <EditText
            android:id="@+id/emailRegistration"
            style="@style/credentials"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableLeft="@drawable/ic_mail_outline_black"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameRegistration" />

        <EditText
            android:id="@+id/passwordRegistration"
            style="@style/credentials"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailRegistration" />

        <EditText
            android:id="@+id/confirmPasswordRegistration"
            style="@style/credentials"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_border"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRegistration" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>